--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -142,6 +142,12 @@ input:focus {
   color: #4dccf1;
 }
 
+.common_block_wrapper {
+  padding: 0.2rem;
+  background-color: #020f27;
+  border: 1px solid #2f326c;
+}
+
 .backgroundcolor {
   width: 100%;
   height: 100%;
