--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "ZhenyanGB-Regular";
-  src: url("@/assets/font/ZhenyanGB-Regular.ttf");
+  font-family: "ALiHanYiZhiNengHeiTi-2";
+  src: url("@/assets/font/ALiHanYiZhiNengHeiTi-2.ttf");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
