--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -375,3 +375,10 @@ input:focus {
     text-align: right;
   }
 }
+
+.common_main_container {
+  margin: 0.2rem;
+  padding: 0.1rem 0.3rem;
+  background-color: #040c1f;
+  border-radius: 0.1rem;
+}
