--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -5,6 +5,16 @@
   font-style: normal;
   font-display: swap;
 }
+.ant-input-affix-wrapper {
+  background-color: #041030;
+  border-color: #0096ff;
+  .ant-input {
+    background-color: #041030;
+    &::placeholder {
+      color: #999;
+    }
+  }
+}
 
 /* 下面我们会解释这些 class 是做什么的 */
 .silde-enter-active,
@@ -381,4 +391,26 @@ input:focus {
   padding: 0.1rem 0.3rem;
   background-color: #040c1f;
   border-radius: 0.1rem;
+}
+
+.common_tableoperation_wrapper {
+  width: 100%;
+  height: 0.6rem;
+  text-align: left;
+  .a-button {
+    .ant-btn-default {
+      &:hover {
+        color: #fff;
+      }
+    }
+  }
+  .import {
+    background-color: #0096ff;
+  }
+  .export {
+    background-color: #00ce2c;
+  }
+  .add {
+    background-color: #002761;
+  }
 }
