--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -395,6 +395,12 @@ input:focus {
 }
 
 .common_tableoperation_wrapper {
+  .ant-space {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
   width: 100%;
   height: 0.6rem;
   text-align: left;
