--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -388,7 +388,7 @@ input:focus {
 }
 
 .common_main_container {
-  margin: 0.2rem;
+  margin: 0rem 0.2rem;
   padding: 0.1rem 0.3rem;
   background-color: #040c1f;
   border-radius: 0.1rem;
