--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -41,7 +41,7 @@ body {
   min-width: 100vw;
   overscroll-behavior: none;
   ::-webkit-scrollbar {
-    display: none;
+    // display: none;
   }
 }
 
