--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -381,7 +381,21 @@ input:focus {
     text-align: right;
   }
 }
-
+.common_filtertool_wrapper {
+  display: flex;
+  width: 100%;
+  height: 0.6rem;
+  align-items: center;
+  .ant-form {
+    width: 100%;
+    .ant-form-item {
+      margin: 0;
+    }
+    .operation {
+      text-align: right;
+    }
+  }
+}
 .common_main_container,
 .common_tab_container {
   margin: 0 0.2rem;
@@ -390,9 +404,20 @@ input:focus {
 }
 .common_main_container {
   padding: 0.1rem 0.3rem;
+  height: calc(100vh - 2.6rem);
 }
 .common_tab_container {
   padding: 0 0.3rem;
+}
+
+.common_basetable_wrapper {
+  &.tabtable {
+    .ant-table-wrapper {
+      .ant-table {
+        height: calc(100vh - 4.1rem)
+      }
+    }
+  }
 }
 
 .common_tableoperation_wrapper {
