--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -178,10 +178,47 @@ input:focus {
   text-align: center;
 }
 
-::v-deep.common_table_wrapper {
-  ::v-deep.ant-table {
-    height: calc(100% - 4rem);
+.common_table_wrapper {
+  margin: 0 0.4rem;
+  .ant-spin-container {
+    .ant-table {
+      background-color: #041335;
+      font-size: 0.17rem;
+      .ant-table-container {
+        .ant-table-placeholder {
+          // height: 3rem;
+        }
+        .ant-table-thead {
+          > tr {
+            > th {
+              padding: 0.05rem 0.2rem;
+              background-color: #0a2e54;
+            }
+          }
+        }
 
+        .ant-table-tbody {
+          .ant-table-row {
+            border: 0;
+            .ant-table-cell {
+              border-top: 0;
+              padding: 0.1rem;
+              background-color: transparent;
+              // 去除换行
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
+            }
+
+            &.table-striped {
+              background-color: #102348;
+            }
+          }
+        }
+      }
+    }
+  }
+  ::v-deep.ant-table {
     ::v-deep.ant-table-wrapper {
       ::v-deep.ant-table-tbody {
         ::v-deep > tr {
@@ -209,72 +246,6 @@ input:focus {
     }
 
     .ant-table-cell {
-    }
-  }
-}
-
-.common_table_wrapper {
-  .ant-spin-container {
-    .ant-table {
-      background-color: #041335;
-      font-size: 0.17rem;
-      .ant-table-container {
-        .ant-table-placeholder {
-          // height: 3rem;
-        }
-        .ant-table-thead {
-          > tr {
-            > th {
-              padding: 0.05rem 0.2rem;
-              background-color: #0a2e54;
-            }
-          }
-        }
-
-        .ant-table-tbody {
-          .ant-table-row {
-            border: 0;
-            &.table-striped {
-              &:hover {
-                background: linear-gradient(
-                  to right,
-                  rgba(13, 70, 191, 0) 0%,
-                  rgba(13, 70, 191, 0.1) 20%,
-                  #0d46bf 50%,
-                  rgba(13, 70, 191, 0.1) 80%,
-                  rgba(13, 70, 191, 0) 100%
-                );
-              }
-            }
-            &:hover {
-              background: linear-gradient(
-                to right,
-                rgba(13, 70, 191, 0) 0%,
-                rgba(13, 70, 191, 0.1) 20%,
-                #0d46bf 50%,
-                rgba(13, 70, 191, 0.1) 80%,
-                rgba(13, 70, 191, 0) 100%
-              );
-            }
-            .ant-table-cell-row-hover {
-              // background-color: #113A65;
-            }
-            .ant-table-cell {
-              border-top: 0;
-              padding: 0.1rem;
-              background-color: transparent;
-              // 去除换行
-              overflow: hidden;
-              text-overflow: ellipsis;
-              white-space: nowrap;
-            }
-
-            &.table-striped {
-              background-color: #102348;
-            }
-          }
-        }
-      }
     }
   }
 }
@@ -408,13 +379,16 @@ input:focus {
 }
 .common_tab_container {
   padding: 0 0.3rem;
+  .common_table_wrapper{
+    // margin: 0;
+  }
 }
 
 .common_basetable_wrapper {
   &.tabtable {
     .ant-table-wrapper {
       .ant-table {
-        height: calc(100vh - 4.1rem)
+        height: calc(100vh - 4.1rem);
       }
     }
   }
