--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -380,7 +380,7 @@ input:focus {
 .common_tab_container {
   padding: 0 0.3rem;
   .common_table_wrapper{
-    // margin: 0;
+    margin: 0;
   }
 }
 
