--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -346,13 +346,18 @@ input:focus {
     width: 100%;
     .ant-form-item {
       margin: 0;
+
       .ant-input-affix-wrapper,
+      .ant-select-selector,
       .ant-picker {
         width: 100%;
         background-color: #041030;
         border-color: #0096ff;
-
+        .ant-select-selection-placeholder {
+          color: #ccc;
+        }
         .ant-input,
+        .ant-select-selector,
         .ant-picker-input input {
           background-color: #041030;
           &::placeholder {
