--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -202,7 +202,7 @@ input:focus {
             .ant-table-cell {
               border-top: 0;
               padding: 0.1rem;
-              background-color: transparent;
+              background-color: #000;
               // 去除换行
               overflow: hidden;
               text-overflow: ellipsis;
