--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -412,6 +412,9 @@ input:focus {
   padding: 0 0.3rem;
   .common_table_wrapper {
     margin: 0;
+    padding: 0.1rem 0;
+    border: 0;
+    background-color: transparent;
   }
 }
 
