--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -15,6 +15,7 @@
     background-color: #001431;
     .ant-modal-title {
       background-color: #001431;
+      line-height: 0.2rem;
     }
   }
 }
@@ -455,5 +456,21 @@ input:focus {
   }
   .add {
     background-color: #002761;
+  }
+}
+
+.common_dislogtitle_item {
+  display: flex;
+  text-align: center;
+  .sequre {
+    display: inline-block;
+    margin: 0 0.1rem 0 0;
+    width: 3px;
+    height: 0.25rem;
+    background-color: #0096ff;
+  }
+  .text {
+    display: inline-block;
+    font-size: 0.25rem;
   }
 }
