--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -185,6 +185,7 @@ input:focus {
 .common_table_wrapper {
   margin: 0.1rem 0.2rem;
   padding: 0.1rem 0.3rem;
+  height: calc(100% - 0.8rem);
   background-color: #040d2b;
   border: 1px solid #004390;
   border-radius: 0.1rem;
@@ -416,14 +417,9 @@ input:focus {
     padding: 0.1rem 0;
     border: 0;
     background-color: transparent;
-  }
-}
-
-.common_basetable_wrapper {
-  &.tabtable {
-    .ant-table-wrapper {
-      .ant-table {
-        // height: calc(100vh - 2rem);
+    .common_basetable_wrapper {
+      .ant-table-wrapper {
+        height: 8rem;
       }
     }
   }
