--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -13,6 +13,10 @@
   font-style: normal;
   font-display: swap;
 }
+
+.el-date-editor {
+  border: 1px solid #0096ff;
+}
 .ant-btn {
   &.yellow {
     background-color: #ce9b00;
