--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -14,6 +14,16 @@
   font-display: swap;
 }
 
+@-webkit-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .el-date-editor {
   border: 1px solid #0096ff;
 }
