--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -61,6 +61,49 @@
   }
 }
 
+.ant-timeline {
+  padding: 0.2rem 0 0 0;
+  .node {
+    display: flex;
+    width: 100%;
+    .time {
+      display: inline-block;
+      margin: 0.05rem 0 0 0;
+      width: 1rem;
+    }
+    .content {
+      display: inline-block;
+      padding: 0.1rem 0.2rem;
+      flex: 1;
+      background-color: #0a1f44;
+      .top {
+        display: flex;
+        .stepname {
+          flex: 1;
+          font-size: 0.23rem;
+          color: #fff;
+        }
+        .status {
+          display: inline-block;
+          width: 1rem;
+          text-align: right;
+          color: #00ffa8;
+        }
+      }
+      .stepcontent {
+        margin: 0.1rem 0;
+        width: 5.5rem;
+        color: #d6eaff;
+      }
+      .attachment {
+        margin: 0.1rem 0 0 0;
+        padding: 0.1rem 0 0 0;
+        border-top: 1px solid #01447c;
+      }
+    }
+  }
+}
+
 /* 下面我们会解释这些 class 是做什么的 */
 .silde-enter-active,
 .silde-leave-active {
